Set max JVM heap size when running tests in CI
I just ran a build and got this:

	#!/bin/bash -eo pipefail
	clojure -A:run-tests

	Running tests in #{"test"}

	Testing fc4c.core-test
	/usr/local/bin/clojure: line 345:   254 Killed                  "$JAVA_CMD" "${jvm_cache_opts[@]}" "${jvm_opts[@]}" -classpath "$cp" clojure.main "${main_cache_opts[@]}" "$@"
	Exited with code 137

	Hint: Exit code 137 typically means the process is killed because it was running out of memory
	Hint: Check if you can optimize the memory usage in your app
	Hint: Max memory usage of this container is 4292354048
	 according to /sys/fs/cgroup/memory/memory.max_usage_in_bytes

I’m not positive this will help… but it might.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,11 @@ jobs:
        - run: "clojure -R:run-tests -e '(println \"deps are installed!\")'"
 
        # Run the tests
-       - run: "clojure -A:run-tests"
+       # The max heap size is set to 1GB because CI machines/containers frequently have <=4GB of
+       # RAM, and JDK 8 defaults to setting the max heap to 1/4 of the total RAM, but such a small
+       # heap max leads to OOM errors when running the tests (at 512MB; I’ve only tested 512MB and
+       # 1GB).
+       - run: "clojure -J-Xmx1g -A:run-tests"
 
        # Save the dependencies cache
        - save_cache:
