--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
    build:
      docker:
-       - image: circleci/clojure:tools-deps
+       - image: clojure:tools-deps-alpine
      steps:
        - checkout
 
