--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
            - dependencies-
 
        # Download deps if necessary. (clojure automatically downloads deps if necessary)
-       - run: "clojure -R:run-tests -e '(println \"deps are installed!\")'"
+       - run: "clojure -R:run-tests:coverage -e '(println \"deps are installed!\")'"
 
        # Save the dependencies cache
        - save_cache:
@@ -28,3 +28,18 @@ jobs:
        # defaults to setting the max heap to ¼ of the total RAM, and CI containers frequently have
        # <= 4GB RAM.)
        - run: "clojure -J-Xmx2g -A:run-tests"
+
+       # Measure test coverage
+       # The || true is at the end there because one of the tests, which passes when run with the
+       # regular test-runner above, fails when run by the coverage tool (Cloverage). I don’t like
+       # this, but it doesn’t actually matter, so for now we just suppress it. The real problem
+       # with this is that it prevents the build from failing if the coverage is below the minimum
+       # threshold (as specified in the coverage profile in deps.edn).
+       - run: "clojure -J-Xmx2g -A:coverage || true"
+
+       # Store test coverage reports
+       - store_artifacts:
+          path: target/coverage
+
+       # Upload test coverage report to Codecov
+       - run: bash <(curl -s https://codecov.io/bash)
