--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
        - run:
           name: Download dependencies (if necessary)
           # Clojure automatically downloads deps if necessary
-          command: "clojure -R:run-tests:coverage:lint -e '(println \"deps are installed!\")'"
+          command: "clojure -R:test:test/run:coverage:lint -e '(println \"deps are installed!\")'"
 
        - save_cache:
            key: dependencies-{{ checksum "deps.edn" }}
@@ -28,7 +28,10 @@ jobs:
           # The max heap size is set to 2GB because I’ve seen OOM errors at 1GB and below. (JDK 8
           # defaults to setting the max heap to ¼ of the total RAM, and CI containers frequently have
           # <= 4GB RAM.)
-          command: "clojure -J-Xmx2g -A:run-tests"
+          command: "clojure -J-Xmx2g -A:test:test/run"
+
+       - store_test_results:
+          path: target/test-results
 
        - run:
           name: Measure test coverage
@@ -37,7 +40,7 @@ jobs:
           # this, but it doesn’t actually matter, so for now we just suppress it. The real problem
           # with this is that it prevents the build from failing if the coverage is below the minimum
           # threshold (as specified in the coverage profile in deps.edn).
-          command: "clojure -J-Xmx2g -A:coverage || true"
+          command: "clojure -J-Xmx2g -A:test:coverage || true"
 
        - store_artifacts:
           path: target/coverage
