--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
        - run:
           name: Download dependencies (if necessary)
           # Clojure automatically downloads deps if necessary
-          command: "clojure -R:test:test/run:coverage:lint -e '(println \"deps are installed!\")'"
+          command: "clojure -R:test:test/run:test/coverage:lint -e '(println \"deps are installed!\")'"
 
        - save_cache:
            key: dependencies-{{ checksum "deps.edn" }}
@@ -28,7 +28,7 @@ jobs:
           # The max heap size is set to 2GB because I’ve seen OOM errors at 1GB and below. (JDK 8
           # defaults to setting the max heap to ¼ of the total RAM, and CI containers frequently have
           # <= 4GB RAM.)
-          command: "clojure -J-Xmx2g -A:test:coverage"
+          command: "clojure -J-Xmx2g -A:test:test/coverage"
 
        - store_test_results:
           path: target/test-results
