--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
        - save_cache:
            key: dependencies-{{ checksum "deps.edn" }}
            paths:
+           - .cpcache
            - ~/.m2
            - ~/.gitlibs
 
