Move tool into new tool dir
Preparatory refactoring for merging the framework repo. This should
ensure that we don’t have any merge conflicts when we merge.

As explained in #58:

> The current name is awful. It’s confusing and especially hard to use
> verbally. I was in a workshop with n00bs, and trying to talk about FC4
> vs FC4C… well, it was a disaster.
>
> It’s also annoying and unnecessary to juggle/jump between the two
> repos.
>
> This will make documentation, examples, etc much better+easier.
>
> And we’ll be able to make atomic changes to the tool and the
> methodology rather than having to coordinate changes across two repos.
>
> (This is tracked as ENG-1656 in Funding Circle’s internal issue
> tracker.)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,17 @@ jobs:
    build:
      docker:
        - image: clojure:tools-deps-alpine
+
+     # It’s a little tricky to get working_directory and checkout to work
+     # together when I want the working directory for all steps *except*
+     # checkout to be a subdirectory of the project — because by default,
+     # checkout checks out into the specified working_directory. I found this
+     # solution here: https://stackoverflow.com/a/50570581/7012
+     working_directory: ~/project/tool
+
      steps:
-       - checkout
+       - checkout:
+           path: ~/project
 
        - restore_cache:
            keys:
