tool: tweak to installation of deps
This should make installing the deps go a bit faster, as per:
  https://clojurians.slack.com/archives/C6QH853H8/p1534782519000100

> levitanong [12:28 PM]
> Haha @ghadi that’s an interesting solution, but I think I’d prefer `clojure -e ''` to that.
>
> ghadi [12:28 PM]
> that will launch the JVM twice, which is why alex suggested `-Spath`

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
        - run:
           name: Download dependencies (if necessary)
           # Clojure automatically downloads deps if necessary
-          command: "clojure -R:test:test/run:test/coverage:lint -e '(println \"deps are installed!\")'"
+          command: "clojure -R:test:test/coverage:lint -Sdescribe"
 
        - save_cache:
            key: dependencies-{{ checksum "deps.edn" }}
