--- a/tool/renderer/package.json
+++ b/tool/renderer/package.json
@@ -4,8 +4,8 @@
   "description": "Renders Structurizr Express diagrams in a headless browser using Puppeteer.",
   "main": "render.js",
   "dependencies": {
-    "puppeteer": "^1.9.0",
-    "data-uri-to-buffer": "^2.0.0"
+    "data-uri-to-buffer": "^2.0.0",
+    "puppeteer": "^1.9.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
