--- a/tool/renderer/package.json
+++ b/tool/renderer/package.json
@@ -5,12 +5,12 @@
   "main": "render.js",
   "dependencies": {
     "data-uri-to-buffer": "^2.0.0",
-    "puppeteer": "^1.9.0"
+    "puppeteer": "^1.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": "https://github.com/FundingCircle/fc4-framework.git",
   "author": "Avi Flax <avi.flax@fundingcircle.com>",
-  "license": "ISC"
+  "license": "BSD-3-Clause"
 }
