--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,15 +39,11 @@ jobs:
 
        - run:
           name: Download Clojure Dependencies (if necessary)
-          # Clojure automatically downloads deps if necessary
-          command: clojure -R:test:test/coverage:lint -Stree
+          command: bin/download-clojure-deps
 
        - run:
           name: Download Node Dependencies (if necessary)
-          working_directory: ~/project/tool/renderer
-          environment:
-            PUPPETEER_SKIP_CHROMIUM_DOWNLOAD: true
-          command: npm install
+          command: bin/download-node-deps
 
        - save_cache:
            name: Save Clojure Dependencies (if changed)
@@ -61,7 +57,7 @@ jobs:
            name: Save Node Dependencies (if changed)
            key: node-deps-{{checksum "renderer/package.json"}}
            paths:
-           - ~/project/tool/renderer/node_modules
+           - renderer/node_modules
 
    tool_test:
      <<: *tool_job_defaults
@@ -77,10 +73,7 @@ jobs:
 
        - run:
           name: Run tests and measure test coverage
-          # The max heap size is set to 2GB because I’ve seen OOM errors at 1GB and below. (JDK 8
-          # defaults to setting the max heap to ¼ of the total RAM, and CI containers frequently have
-          # <= 4GB RAM.)
-          command: clojure -J-Xmx2g -A:test:test/coverage
+          command: bin/tests-with-coverage
 
        - store_test_results:
           path: target/test-results
