[tool: automated rendering] Add names to CI caching steps
Should make jobs clearer and more useful in the CircleCI UI.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,11 +43,12 @@ jobs:
           command: clojure -R:test:test/coverage:lint -Stree
 
        - run:
-          name: Download Node.js Dependencies (if necessary)
+          name: Download Node Dependencies (if necessary)
           working_directory: ~/project/tool/renderer
           command: npm install
 
        - save_cache:
+           name: Save Clojure Dependencies (if changed)
            key: clj-deps-{{ checksum "deps.edn" }}
            paths:
            - .cpcache
@@ -55,6 +56,7 @@ jobs:
            - ~/.gitlibs
 
        - save_cache:
+           name: Save Node Dependencies (if changed)
            key: node-deps-{{checksum "renderer/package.json"}}
            paths:
            - ~/project/tool/renderer/node_modules
