--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ version: 2
 tool_job_defaults: &tool_job_defaults
   working_directory: ~/project/tool
   docker:
-    - image: quay.io/aviflax/clojure-node:clojure-1.9.0.394_node-10.12
+    - image: quay.io/aviflax/clojure-node-chromium:clojure-1.9.0.394_node-10.12
 
 restore_clj_cache_keys: &restore_clj_cache_keys
   keys:
