[tool] Support recent/current versions of Chrome/Chromium
This switches our test+build containers from Alpine to Debian Stretch,
which has a more recent version of Chromium. This allows us to upgrade
to a less ancient version of Puppeteer; this less ancient Puppeteer is
compatible with modern Chrome/Chromium. Therefore users no longer need
to have the ancient+obsolete Chrome/Chromium 68 installed on their
systems, which was unlikely, annoying, and insecure.

This also upgrades from Node 10 to Node 11, because why not 😬

Fixes #92

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ version: 2
 tool_job_defaults: &tool_job_defaults
   working_directory: ~/project/tool
   docker:
-    - image: quay.io/fundingcircle/clojure-node-chromium:clojure-1.9.0.394_node-10.12_alpine-3.8
+    - image: quay.io/fundingcircle/clojure-node-chromium:clojure-1.9.0.394_node-11.1_debian-stretch
 
 restore_cache_clj: &restore_cache_clj
   name: Restore cached Clojure dependencies
@@ -118,9 +118,6 @@ jobs:
        - run:
            name: Download dependencies needed for building dist package
            command: bin/download-pkg-deps
-           environment:
-             # Workaround for https://github.com/nodejs/docker-node/issues/813
-             npm_config_unsafe_perm: true
        - run:
            name: Create distribution packages
            command: |
