--- a/.circleci/images/tool/Dockerfile
+++ b/.circleci/images/tool/Dockerfile
@@ -1,32 +1,21 @@
-# I wish the “official” Node images included a tag to fix the version of Alpine
-# used, but they don’t. Therefore we’re specifing a specific image hash to use
-# rather than a tag.
-# This base image at this hash uses Node 10.12 and Alpine 3.8:
-FROM node@sha256:1e3e3e7ffc965511c5d4f4e90ec5d9cabee95b5b1fbcd49eb6a2289f425cf183
+FROM node:11.1.0-stretch
 
 LABEL maintainer="Avi Flax <avi.flax@fundingcircle.com>"
-LABEL description="Node, Clojure, and Chromium on Alpine"
+LABEL description="Node 11, Clojure 1.9, and Chromium 70 on Debian Stretch"
 
-ENV JRE_VERSION=8.181.13-r0
+ENV JRE_VERSION=8u181-b13-2~deb9u1
 ENV CLOJURE_VERSION=1.9.0.394
+ENV CHROMIUM_VERSION=70.0.3538.67-1~deb9u1
 
 WORKDIR /tmp
 
-# Dependencies of Clojure and the Clojure installer.
-# NB: the OpenJDK image published by Docker the company does a few things beyond
-# just apk adding the openjdk-jre package; those things might also be necessary;
-# not sure. See
-# https://github.com/docker-library/openjdk/blob/master/8/jre/alpine/Dockerfile
-RUN apk -q --no-progress --no-cache add openjdk8-jre=$JRE_VERSION bash curl
+# Install dependencies of the Renderer and Clojure
+# We’re including rlwrap just because it’s handy in case we need to run a REPL
+# in a container, for debugging.
+RUN apt-get update -yq
+RUN apt-get install -yq chromium=$CHROMIUM_VERSION openjdk-8-jre=$JRE_VERSION rlwrap
 
-# Clojure itself
+# Install Clojure
 RUN wget -q https://download.clojure.org/install/linux-install-$CLOJURE_VERSION.sh \
       && chmod +x linux-install-$CLOJURE_VERSION.sh \
       && ./linux-install-$CLOJURE_VERSION.sh
-
-# We need Chromium for automated rendering with Puppeteer; see
-#   https://github.com/GoogleChrome/puppeteer/blob/master/docs/troubleshooting.md#running-on-alpine
-# This specific version of Chromium is locked to the specific version of
-# Puppeteer that we’re using as per the above page; see also
-#   <project-root>/tool/renderer/package.json
-RUN apk -q --no-progress --no-cache add chromium=68.0.3440.75-r0
