--- a/tool/renderer/package.json
+++ b/tool/renderer/package.json
@@ -5,7 +5,7 @@
   "main": "render.js",
   "dependencies": {
     "data-uri-to-buffer": "2.0.0",
-    "puppeteer": "1.8.0"
+    "puppeteer-core": "1.8.0"
   },
   "pkg": {
     "assets": "page-functions.js"
