[tool] Add comment pointing to Dockerfile source of base testing image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ version: 2
 tool_job_defaults: &tool_job_defaults
   working_directory: ~/project/tool
   docker:
+    # The source for this image is at ./images/tool/Dockerfile
     - image: quay.io/fundingcircle/clojure-node-chromium:clojure-1.9.0.394_node-10.13_debian-stretch
 
 jobs:
