--- a/tool/Dockerfile.test
+++ b/tool/Dockerfile.test
@@ -2,7 +2,9 @@
 # the tool because, among other reasons, the tool requires access to your
 # clipboard.
 
+# The source for this base image is at <project-root>/.circleci/images/tool/Dockerfile
 FROM quay.io/fundingcircle/clojure-node-chromium:clojure-1.9.0.394_node-10.13_debian-stretch
+
 LABEL maintainer="Avi Flax <avi.flax@fundingcircle.com>"
 
 WORKDIR /tool
