[tool] Add missing required field to renderer’s package.json
It doesn’t _really_ matter because we don’t plan to ever publish this
module to npm, but I ran this file through http://package-json-validator.com/
just to ensure I’d added the `private` property properly in the prio
commit and that page told me that the file was invalid without `version` so
what the hell.

--- a/tool/renderer/package.json
+++ b/tool/renderer/package.json
@@ -2,6 +2,7 @@
   "name": "render",
   "description": "Renders Structurizr Express diagrams in a headless browser using Puppeteer.",
   "private": true,
+  "version": "0.0.0",
   "bin": "render.js",
   "main": "render.js",
   "dependencies": {
