[tool] Fix: packaged renderer doesn’t work at all
Not sure how I missed this, but because of [a partial incompatibility
between pkg and Puppeteer](1) the renderer was just not working at all
when packaged. Luckily I found [a workaround](2) in the same thread, which
I’ve implemented here.

I’ve also added a test of the packaged renderer to the CI job that
builds the packages.

I’ve manually and locally packaged then extracted and installed the
renderer with this change, and it now Works For Me™ with Chromium 68 and
72 and with Chrome 70 (all on MacOS _of course_).

For the curious, here’s how I did that verification:

```shell
cd tool
bin/run bin/pkg-all
docker cp `docker container list -qn 1`:tool/target/pkg /tmp
cd tmp/pkg
tar xzvf fc4-macos.tar.gz
mv fc4/fc4* ~/bin/
cd -
cat test/data/structurizr/express/diagram_valid_messy.yaml | fc4-render --verbose | open -f -a /Applications/Preview.app/
```

[1]: https://github.com/zeit/pkg/issues/204#issuecomment-345624945
[2]: https://github.com/zeit/pkg/issues/204#issuecomment-378929002

TS

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -124,12 +124,19 @@ jobs:
              bin/pkg-all
              mkdir -p /workspace/packages
              mv target/pkg/*.gz /workspace/packages/
+       - run:
+           # Packaging any node app with pkg can be tricky; that’s doubly true for an app that uses
+           # Puppeteer. So it’s a good idea to ensure that the packaged renderer actually works.
+           name: Test packaged renderer
+           command: |
+             mkdir test-renders
+             cat test/data/structurizr/express/diagram_valid_messy.yaml \
+               | target/pkg/renderer/render-linux --verbose > test-renders/1.png
        - persist_to_workspace:
            root: /workspace
            paths: [packages]
-       - store_artifacts:
-           # Not entirely sure we need these artifacts but seems like a good idea just in case.
-           path: /workspace/packages
+       - store_artifacts: {path: /workspace/packages}
+       - store_artifacts: {path: test-renders}
        - save_cache:
            name: Cache the Clojure dependencies needed for building uberjar
            key: clj-uberjar-deps-{{ checksum "deps.edn" }}-{{checksum "bin/download-pkg-deps"}}
