--- a/tool/renderer/package.json
+++ b/tool/renderer/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "fc4-se-renderer",
+  "name": "render",
   "description": "Renders Structurizr Express diagrams in a headless browser using Puppeteer.",
+  "bin": "render.js",
   "main": "render.js",
   "dependencies": {
     "data-uri-to-buffer": "2.0.0",
     "puppeteer": "1.8.0"
+  },
+  "pkg": {
+    "assets": "page-functions.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
