--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -79,23 +79,29 @@ jobs:
        - attach_workspace: {at: /workspace}
        - run: |
            [ "$GITHUB_TOKEN" ] || { echo 'GITHUB_TOKEN is not set!' && exit 1; }
+       - restore_cache: {keys: [ghr_v0.12.0_linux_amd64]}
        - run:
-           ## TODO: cache ghr
            name: Download and unpack ghr
            command: |
+             if [ -f ~/bin/ghr ]; then exit 0; fi
              wget https://github.com/tcnksm/ghr/releases/download/v0.12.0/ghr_v0.12.0_linux_amd64.tar.gz
              tar -xzf ghr_v0.12.0_linux_amd64.tar.gz --strip-components 1 ghr_v0.12.0_linux_amd64/ghr
+             mkdir -p ~/bin
+             mv ghr ~/bin/ghr
+       - save_cache:
+           key: ghr_v0.12.0_linux_amd64
+           paths: [~/bin]
        - run:
            name: Create GitHub Release and upload distribution packages to it
            # Docs for ghr’s options: https://github.com/tcnksm/ghr/#options
            command: |
              TAG="${CIRCLE_BRANCH}_$(date "+%Y-%m-%d")_${CIRCLE_BUILD_NUM}"
-             ./ghr -t $GITHUB_TOKEN \
-                   -u $CIRCLE_PROJECT_USERNAME \
-                   -r $CIRCLE_PROJECT_REPONAME \
-                   -c $CIRCLE_SHA1 \
-                   $TAG \
-                   /workspace/packages
+             ~/bin/ghr -t $GITHUB_TOKEN \
+                       -u $CIRCLE_PROJECT_USERNAME \
+                       -r $CIRCLE_PROJECT_REPONAME \
+                       -c $CIRCLE_SHA1 \
+                       $TAG \
+                       /workspace/packages
 
 workflows:
   version: 2
