--- a/tool/doc/fc4-tool-context.yaml
+++ b/tool/doc/fc4-tool-context.yaml
@@ -2,7 +2,7 @@ links:
   The FC4 Framework: https://fundingcircle.github.io/fc4-framework/
   Structurizr Express: https://structurizr.com/express
 ---
-type: Container
+type: System Context
 scope: fc4-tool
 description: https://fundingcircle.github.io/fc4-framework/ • last edited 2018-11-13 by Avi Flax (avi.flax@fundingcircle.com)
 
@@ -16,31 +16,13 @@ elements:
   description: Web app that renders diagrams from YAML
 - type: Software System
   name: fc4-tool
-  containers:
-  - name: Main Executable
-    description: Processes YAML, invokes Renderer, etc.
-    technology: Clojure/Java/JVM
-    position: '100,500'
-    type: Container
-  - name: Renderer
-    description: Invokes and controls Chromium to render diagrams using Structurizr Express
-    technology: JavaScript/Node
-    position: '700,500'
-    type: Container
-  - name: Chromium
-    description: or Chrome; Web browser; runs in headless mode
-    position: '1300,500'
-    type: Container
+  position: '700,500'
 
 relationships:
-- source: Chromium
-  destination: Structurizr Express
-- source: Main Executable
-  destination: Renderer
-- source: Renderer
-  destination: Chromium
 - source: User
-  destination: Main Executable
+  destination: fc4-tool
+- source: fc4-tool
+  destination: Structurizr Express
 
 styles:
 - type: element
