--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ jobs:
        - run:
            name: Download and unpack ghr
            command: |
-             if [ -f ~/bin/ghr ]; then exit 0; fi
+             if [ -x ~/bin/ghr ]; then exit 0; fi
              wget https://github.com/tcnksm/ghr/releases/download/v0.12.0/ghr_v0.12.0_linux_amd64.tar.gz
              tar -xzf ghr_v0.12.0_linux_amd64.tar.gz --strip-components 1 ghr_v0.12.0_linux_amd64/ghr
              mkdir -p ~/bin
