--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,8 @@ jobs:
            command: |
              mkdir test-renders
              target/pkg/linux/fc4/fc4 render \
-               test/data/structurizr/express/diagram_valid_messy.yaml > test-renders/1.png
+               test/data/structurizr/express/diagram_valid_messy.yaml
+             cp test/data/structurizr/express/diagram_valid_messy.png test-renders/1.png
        - persist_to_workspace: {root: /workspace, paths: [packages]}
        - store_artifacts: {path: /workspace/packages}
        - store_artifacts: {path: test-renders}
