[tool] Disable codecov’s “patch” coverage checks
I don’t understand them, don’t find them helpful, and they frequently
mark a PR with a big red X even though the overall project coverage is
fine.

--- a/tool/codecov.yml
+++ b/tool/codecov.yml
@@ -5,8 +5,4 @@ coverage:
         target: auto
         threshold: 1 # up to 1% drop should pass
         base: auto
-    patch:
-      default:
-        target: auto
-        threshold: 1 # up to 1% drop should pass
-        base: auto
+    patch: no
